<resources>
    <string name="app_name">MyFoodApp</string>
    <string name="my_food_app">My Food App</string>
    <string name="hello_explore_your_dream_food">Hello explore your dream food</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="my_food_app1">My Food App</string>
    <string name="register1">Register</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="sign_in1">Sign in</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="home">Home</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <string name="title_activity_navigation_my_food_app">NavigationMyFoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home1">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="shorttimecoding_gmail_com">shorttimecoding@gmail.com</string>
    <string name="s_t_c">S T C</string>
    <string name="_7_00_23_00">7:00 - 23:00</string>
    <string name="_5_0">5.0</string>
    <string name="product_name">Product name</string>
    <string name="yummyhihi">Yummyhihi</string>
    <string name="search_your_food">Search your food</string>
    <string name="discount">Discount</string>
    <string name="make_order">Make Order</string>
    <string name="my_cart1">My Cart</string>
    <string name="capuchino">Capuchino</string>
    <string name="description">Description</string>
    <string name="profile">Profile</string>
</resources>